# Tendon_Robot_Learning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
benchmarks/effusion-autogen/: log.csv  not-solved-0001.toml  not-solved-0002.toml  not-solved-0003.toml  not-solved-0004.toml  not-solved-0005.toml  not-solved-0006.toml  not-solved-0014.toml  not-solved-0016.toml  not-solved-0018.toml  not-solved-0019.toml  not-solved-0020.toml  not-solved-0024.toml  not-solved-0025.toml  not-solved-0028.toml  not-solved-0029.toml  not-solved-0030.toml  not-solved-0031.toml  not-solved-0033.toml  not-solved-0034.toml  not-solved-0038.toml  not-solved-0041.toml  not-solved-0042.toml  not-solved-0043.toml  not-solved-0044.toml  not-solved-0045.toml  not-solved-0046.toml  not-solved-0048.toml  not-solved-0051.toml  not-solved-0052.toml  not-solved-0054.toml  not-solved-0057.toml  not-solved-0059.toml  not-solved-0062.toml  not-solved-0063.toml  not-solved-0064.toml  not-solved-0067.toml  not-solved-0069.toml  not-solved-0071.toml  not-solved-0072.toml  (+2732 more)
benchmarks/sphere-env/: log-0001.csv  not-solved-0001.toml  not-solved-0002.toml  not-solved-0003.toml  task-0001.toml  task-0002.toml  task-0003.toml  task-0004.toml  task-0005.toml  task-0006.toml  task-0007.toml  task-0008.toml  task-0009.toml  task-0010.toml  task-0011.toml  task-0012.toml  task-0013.toml  task-0014.toml  task-0015.toml  task-0016.toml  task-0017.toml  task-0018.toml  task-0019.toml  task-0020.toml  task-0021.toml  task-0022.toml  task-0023.toml  task-0024.toml  task-0025.toml  task-0026.toml  task-0027.toml  task-0028.toml  task-0029.toml  task-0030.toml  task-0031.toml  task-0032.toml  task-0033.toml  task-0034.toml  task-0035.toml  task-0036.toml  (+2709 more)
cpp/flit-test/: .gitignore  custom.mk  flit-config.toml  main.cpp
cpp/flit-test/tests/: TendonShapeTest.cpp
cpp/src/apps/: available-serial-ports.cpp  cheap_ik.cpp  closed_loop_control_example.cpp  control_app.cpp  create_plan.cpp  data_collector.cpp  example.cpp  fix_stl.cpp  gen_tasks.cpp  haptic_subscriber_example.cpp  haptic_tip_rviz_viewer.cpp  json_convert.cpp  json_pretty.cpp  ndi-terminal.cpp  profile_chained_plan.cpp  profile_fk.cpp  profile_problem.cpp  reg_example.cpp  resolved_rate_problem.cpp  roadmap_chained_plan.cpp  roadmap_ik.cpp  robot_comm_example.cpp  robot_serial.cpp  sample_configs.cpp  sensor_rviz_viewer.cpp  serial_port_example.cpp  tendon_shape_example.cpp  tip_publish.cpp  transform_points.cpp  view_plan.cpp  view_points.cpp  view_problem.cpp  view_tendon.cpp  view_voxel_problem.cpp  voxelize_sphere.cpp
cpp/src/design-optimization/: MultiGoalPlanningCostIK.cpp  MultiGoalPlanningCostIK.h
cpp/src/haptic/: HapticQSubscriber.cpp  HapticQSubscriber.h  HapticTransform.cpp  HapticTransform.h  StreamingTransformer.h
cpp/src/mag-tracker/: StreamingSensor.h  svd_reg.h
cpp/src/motion-planning/: AbstractValidityChecker.cpp  StreamingPlanner.cpp  StreamingPlanner.h  VoxelCachedLazyPRM.cpp  VoxelCachedLazyPRM.h
cpp/src/phys-robot/: MotorControlPublisher.h  MotorControlSubscriber.h  trajectory_conversion.h
cpp/src/python-bindings/: module_cpptendon.cpp  submodule_design_optimization.cpp  submodule_design_optimization.h  submodule_ndi.cpp  submodule_ndi.h  submodule_tendon.cpp
cpp/src/qt_util/: StdinIO.cpp  StdinIO.h  StdinWatcher.cpp  StdinWatcher.h  asKeyValueRange.h  streams.cpp  streams.h
cpp/src/serialport/: SerialPort.cpp  SerialPort.h
cpp/src/tendon/: .TendonRobot.cpp.swp  TendonResult.cpp  TendonResult.h  TendonRobot.cpp  TendonRobot.h  solve_initial_bending.cpp  solve_initial_bending.h
cpp/src/tip-control/: StreamingIK.h
cpp/src/util/: vector_ops.h
cpp/src/vistendon/: EnvironmentRvizPublisher.h  ManualRvizMarkerArrayPublisher.h  RvizMarkerArrayPublisher.h  StreamingInterleaver.cpp  StreamingInterleaver.h  StreamingRvizTipPublisher.h  TendonBackboneRvizPublisher.h  TendonRvizPublisher.h  TrajectoryVisualizer.h  VoxelRvizPublisher.h  marker_array_conversions.h  view_path.cpp  view_path.h
data/: .tendon_parameter.toml.swp  default.toml  optimized_robot_limits.toml  optimized_robot_parameters.toml  phys_robot_limits.toml  problem.toml  sim_robot_limits.toml  tendon_parameter.toml  test-shape.stl  test.toml
docker/: Dockerfile-ros2  Dockerfile-ros2-dev  Dockerfile-ros2-ompl  README.md  build.sh  run.sh
matlab/: states.csv  tendon_shape.m
matlab/original/: Tendon_Actuated_Robot_Fast.m
python/real_tendon/: phys_robot_limits.toml  pure_test_real_eight_traj.py  pure_test_real_sphere.py  pure_train_real_eight_traj.py  pure_train_real_sphere.py  real_eight_generalization.py  real_eight_generalization_1.py  real_sphere_generalization.py  real_sphere_generalization_1.py
python/src/: .sequential_shape_gpt_modified.py.swp  .traj_to_datalist.py.swp  CosseratRod.py  CosseratTest.py  RL_env.py  TendonRobot.py  TestRobot.py  chain_plans.py  clean_toml.py  code_from_ChatGPT.py  combine_policy_training.py  combine_test_policy.py  comparison_demo_learning.py  constant_curvature_model_tendon.py  create_task_sequence.py  csv_to_pkl.py  cuboid.toml  default.toml  default1.toml  dimand_generalization.py  emd.py  gen_tau.py  gen_tendon_region_samples.py  gpt_data_collection.py  gpt_model.py  gpt_modified.py  gridgen.py  learn_actual_pc.py  learn_tendon_pc.py  learn_tendon_shape.py  len_to_tau_conversion.py  measure_tip_poses.py  modeling_gpt2.py  nearest_lookup.py  pbf_data_collection.py  pbf_traj_collection.py  pc_learning.py  pc_sim.py  phys_optimization.py  pickle_to_list.py  (+34 more)
resources/: .gitignore  README.md  effusion-region-6k-with-hole.stl  qtcreator-coding-style.xml  tendon-effusion-config-2.toml  tendon-effusion-config.toml
resources/collapse-segmentation/: cheap-ik-both.csv  cheap-ik-voxels.csv  cheap-ik.csv  collapse-segmentation-moved-with-hole.json  collapse-segmentation-moved-with-hole.msgpack  collapse-segmentation-moved-with-hole.nrrd  collapse-segmentation-reoriented-with-hole-3k.stl  collapse-segmentation-upsampled.nrrd  collapse-segmentation.nrrd  ik-requests.csv  problem.toml
vagrant/: README.md  Vagrantfile
(+166 files in other folders)
