<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Tendon_Robot_Learning</name>
  <version>0.1.0</version>
  <description>Experiments for a tendon-actuated robot</description>
  <author email="mikebentley15@gmail.com">Michael Bentley</author>
  <maintainer email="mikebentley15@gmail.com">Michael Bentley</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>trimesh</depend>
  <depend>emd_cuda</depend>
  <depend>PyTorchEMD</depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
